gatsby-theme-untied/src/components/Carousel/styles.module.styl
@require '../../themes/standard/config/breakpoints'
@require '../../themes/standard/config/colors'

.Carousel
  overflow: hidden
  margin-bottom: 50px
  margin: 0 auto
  width: 74%

  +above('m')
    padding: 0
    overflow: auto
    width: unset

  .carousel-slides
    display: flex
    overflow-x: auto
    scroll-snap-type: x mandatory
    scroll-behavior: smooth
    -webkit-overflow-scrolling: touch


  .carousel-slides::-webkit-scrollbar
    display: none

  .carousel-slides::-webkit-scrollbar-thumb
    display: none

  .carousel-slides::-webkit-scrollbar-track
    display: none

  .carousel-slides > section
    scroll-snap-align: start
    flex-shrink: 0
    height: 100%
    margin-right: 50px
    -webkit-transform-origin: center center
    transform-origin: center center
    -webkit-transform: scale(1)
    transform: scale(1)
    transition: -webkit-transform 0.5s
    transition: transform 0.5s
    transition: transform 0.5s, -webkit-transform 0.5s
    position: relative
    display: flex
    flex-direction: column
    justify-content: center
    +above('m')
      flex-shrink: unset
      margin-right: 15px


  .carousel-indicators
    display: flex
    justify-content: center
    list-style-type: none

    +above('m')
      display: none

    li
      width: 20px
      height: 18px
      border: 0px solid primary-color
      border-radius: 50%
      margin-right: 10px
      text-align: center
      &:active
        background: primary-color

        .carousel-indicator
          width: 20px
          height: 20px
          border: 0px solid primary-color

